Fixed heading and subheading for better alignment

--- a/css/general.css
+++ b/css/general.css
@@ -40,7 +40,7 @@ body {
 .heading-secondary {
   font-size: 5.2rem;
   line-height: 1.05;
-  margin-bottom: 3.2rem;
+  margin-bottom: 1.8rem;
 }
 
 .grid {
